projects/scm-platform/apps/demand-planning-service/src/main/java/com/example/scmplatform/demandplanning/domain/error/InvalidSuggestionStateException.java
package com.example.scmplatform.demandplanning.domain.error;

/**
 * Raised when a status transition is invalid for the suggestion's current state.
 * Maps to HTTP 422 INVALID_SUGGESTION_STATE.
 */
public class InvalidSuggestionStateException extends RuntimeException {
    public InvalidSuggestionStateException(String message) {
        super(message);
    }
}
